[tool.poetry]
name = "memoize"
version = "0.2.0"
description = "Python3 memoization decorator"
authors = ["Ethan Ho <ethan.n.ho@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
pytest-dotenv = "^0.5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
