[tool.poetry]
name = "memoize"
version = "0.3.0"
description = "Python3 memoization decorator"
authors = ["Ethan Ho <53266718+ethho@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

# Extra dependencies
pandas = { version = "^1.5.3", optional = true }
boto3 = { version = "^1.26.53", optional = true }

[tool.poetry.extras]
dataframe = ["pandas"]
ddb = ["boto3"]

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
pytest-dotenv = "^0.5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
