[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "memoize"
version = "0.4.0"
description = "Python3 memoization decorator"
readme = "README.md"
authors = ["Ethan Ho <53266718+ethho@users.noreply.github.com>"]
license = "MIT"
repository = "https://github.com/ethho/memoize"
keywords = ["memoization", "caching", "decorator"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
pytest-dotenv = "^0.5.2"
pandas = "^1.5.3"
boto3 = "^1.26.53"
